<?xml version="1.0"?>
<package format="2">
  <name>ucar_localization</name>
  <version>0.0.0</version>
  <description>The ucar_localization package</description>

  <maintainer email="yawara@todo.todo">yawara</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf</depend>

  <depend>tf_conversions</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
